Rolled back changes caused by pushing to incorrect branch